# greendigit_challenge

./: README.md  requirements.txt  run_experiment.sh  setup_environment.sh
task-a/: pyproject.toml
task-a/outputs/: metrics.json  peak_submission.csv
task-a/scripts/: exp_forecasting.py  exp_peak_detection.py  exp_signal_detection.py  run_pipeline.py
task-a/src/task_a/: cli.py
task-a/src/task_a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task-a/src/task_a/models/: model.py
task-b/: pyproject.toml
task-b/dirac_sim/: __main__.py
task-b/dirac_sim/baselines/: __init__.py  greedy_energy.py  multi_objective.py  temporal_carbon.py
task-b/examples/: exp_scheduling.py  run_simulation.py
task-b/output/: exp_scheduling.csv  exp_scheduling_our_forecast.csv  exp_scheduling_test_period.csv
